syntax = "proto3";

message SnapshotPacketCommunicated{
    SnapshotCommunicated snapshot = 1;
    UserCommunicated user = 2;
}

message UserCommunicated {
    enum GenderCommunicated {
        MALE = 0;
        FEMALE = 1;
        OTHER = 2;
    }
    uint64 user_id = 1;
    string username = 2;
    uint32 birthday = 3;
    GenderCommunicated gender = 4;
}

message SnapshotCommunicated {
    uint64 datetime = 1;
    PoseCommunicated pose = 2;
    ColorImageCommunicated color_image = 3;
    DepthImageCommunicated depth_image = 4;
    FeelingsCommunicated feelings = 5;
}

message PoseCommunicated {
    message TranslationCommunicated {
        double x = 1;
        double y = 2;
        double z = 3;
    }
    message RotationCommunicated {
        double x = 1;
        double y = 2;
        double z = 3;
        double w = 4;
    }
    TranslationCommunicated translation = 1;
    RotationCommunicated rotation = 2;
}

message ColorImageCommunicated {
    uint32 width = 1;
    uint32 height = 2;
    bytes data = 3;
}

message DepthImageCommunicated {
    uint32 width = 1;
    uint32 height = 2;
    repeated float data = 3;
}

message FeelingsCommunicated {
    float hunger = 1;
    float thirst = 2;
    float exhaustion = 3;
    float happiness = 4;
}
