syntax = "proto3";

message SnapshotPacketInner{
    SnapshotInner snapshot = 1;
    UserInner user = 2;
}

message UserInner {
    enum GenderInner {
        MALE = 0;
        FEMALE = 1;
        OTHER = 2;
    }
    uint64 user_id = 1;
    string username = 2;
    uint32 birthday = 3;
    GenderInner gender = 4;
}

message SnapshotInner {
    uint64 datetime = 1;
    PoseInner pose = 2;
    ImageInner color_image = 3;
    ImageInner depth_image = 4;
    FeelingsInner feelings = 5;
}

message PoseInner {
    message TranslationInner {
        double x = 1;
        double y = 2;
        double z = 3;
    }
    message RotationInner {
        double x = 1;
        double y = 2;
        double z = 3;
        double w = 4;
    }
    TranslationInner translation = 1;
    RotationInner rotation = 2;
}

message ImageInner {
    uint32 width = 1;
    uint32 height = 2;
    string blob_id = 3;
}

message FeelingsInner {
    float hunger = 1;
    float thirst = 2;
    float exhaustion = 3;
    float happiness = 4;
}
